refactor: New Mesh model